force-app/main/default/objects/OrgWorkflowTimeTrigger__c/OrgWorkflowTimeTrigger__c.object-meta.xml
<CustomObject>
    <description>Organization Workflow TimeTrigger information retrieved during polling for the org search functionality</description>
    <label>OrgWorkflowTimeTrigger</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgWorkflowTimeTriggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>