force-app/main/default/objects/OrgWorkflowTimeTrigger__c/fields/OffsetFromField__c.field-meta.xml
<CustomField>
    <fullName>OffsetFromField__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>What field is it basing it&apos;s time on (Arrival, departure, etc)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OffsetFromField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>