force-app/main/default/objects/OrgWorkflowTimeTrigger__c/fields/TimeLength__c.field-meta.xml
<CustomField>
    <fullName>TimeLength__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>How far off of the offset field is it (3,4,5)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TimeLength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>