force-app/main/default/objects/OrgWorkflowTimeTrigger__c/fields/TimeTriggerUnit__c.field-meta.xml
<CustomField>
    <fullName>TimeTriggerUnit__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Time unit it is off the Offset Field (Hours, Days, etc)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TimeTriggerUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>