force-app/main/default/objects/OrgWorkflowTimeTrigger__c/fields/WorkflowID__c.field-meta.xml
<CustomField>
    <fullName>WorkflowID__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Key to tie this table to the ID field on the OrgWorkflows table</description>
    <encryptionScheme>None</encryptionScheme>
    <label>WorkflowID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>